fix(docker): include scripts/ in image for backup/restore
- Removed scripts from .dockerignore
- Keeps backup_automem.py and restore_from_backup.py in container
- Excluded only health_monitor files

--- a/.dockerignore
+++ b/.dockerignore
@@ -54,5 +54,6 @@ dist
 build
 *.egg-info
 
-# Scripts
-scripts
+# Scripts (exclude health monitor, keep backup/restore)
+scripts/Dockerfile.health-monitor
+scripts/health_monitor.py
