fix(docker): add PYTHONPATH to enable script imports
Add PYTHONPATH=/app environment variable to flask-api service to allow
utility scripts in scripts/ directory to import the automem module.

This fixes ModuleNotFoundError when running scripts like reembed_embeddings.py
inside the Docker container.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,6 +37,7 @@ services:
       FLASK_ENV: development
       FLASK_DEBUG: "1"
       PORT: 8001
+      PYTHONPATH: /app  # Required for scripts to import automem module
       FALKORDB_HOST: falkordb
       FALKORDB_PORT: 6379
       FALKORDB_PASSWORD: ${FALKORDB_PASSWORD:-}
