fix(security): prevent .env.* files from being committed (C-1)
- Add .env.* pattern to gitignore to cover all environment file variants
- Add warning comment about never committing secrets
- Add Windows artifact 'nul' to gitignore

Fixes: C-1 from code review report
Severity: CRITICAL
Risk: Secret leakage via accidental commit

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 .claude/settings.local.json
 *.code-workspace
+
+# Environment files - NEVER commit secrets
 .env
+.env.*
+
 **/__pycache__
 automation_hub_dashboard/.env
 automation_hub_dashboard/.venv/
@@ -32,3 +36,5 @@ node_modules/
 /lab/snapshots/
 /lab/results/
 /lab/test_sets/
+# Windows artifacts
+nul
