feat(docker): add PUID/PGID support via gosu entrypoint (Unraid/NAS pattern)
Adds LinuxServer.io-style runtime UID/GID remapping to all three images:

  - entrypoint.sh (Flask API + health monitor)
  - mcp-sse-server/entrypoint.sh (MCP bridge)

On startup the entrypoint:
  1. Reads PUID / PGID env vars (default: 1001/1001)
  2. Remaps appgroup GID via groupmod -o -g
  3. Remaps appuser UID via usermod -o -u
  4. Chowns /home/appuser so the model cache stays writable
  5. Exec's the main process via gosu (preserves signals/PID 1)

gosu added to all runtime apt-get layers. Removed static USER instruction
and --chown on COPY — app files are root-owned/world-readable; only the
home directory (models cache) needs per-user ownership fix at start.

docker-compose.yml: added PUID/PGID vars with ${PUID:-1001} defaults and
a comment explaining the Unraid use case.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,6 +34,10 @@ services:
     ports:
       - "8001:8001" # Flask API
     environment:
+      # PUID/PGID: set to match your host user (e.g. from `id -u` / `id -g`)
+      # Required on Unraid and other NAS systems to avoid permission issues on bind mounts.
+      PUID: ${PUID:-1001}
+      PGID: ${PGID:-1001}
       FLASK_ENV: development
       FLASK_DEBUG: "1"
       PORT: 8001
